text wrap issue with comment resolved

--- a/app/react/components/sizung/components/Comment/index.css
+++ b/app/react/components/sizung/components/Comment/index.css
@@ -58,7 +58,7 @@
   width: 100%;
   overflow-wrap: break-word;
   word-wrap: break-word;
-  white-space: pre;
+  white-space: pre-wrap;
 
   -ms-word-break: break-all;
   word-break: break-word;
